--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Simple Tailwind Stater</title>
+    <title>Clipboard Website</title>
   </head>
   <body>
     <!-- Hero Section -->
     <section id="hero" class="">
-      <div class="section-container mb-40 px-10 pt-16">
+      <div class="section-container mb-40 pt-16">
         <img src="images/logo.svg" alt="" class="mx-auto my-16" />
         <h3>A history of everything you copy</h3>
         <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
@@ -33,15 +33,70 @@
 
     <!-- Snippets section -->
     <section id="snippets" class="">
-      <div class="section-container my-20 px-10">
+      <div class="section-container my-20">
         <h3>Keep track of your snippets</h3>
-        <p
-          class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
-        >
+        <p class="section-p">
           Clipboard instantly stores any item you copy in the cloud, meaning you
           can access your snippets immediately on all your devices. Our Mac and
           iOS apps will help you organize everything.
         </p>
+      </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="">
+      <div class="section-container my-20">
+        <div class="relative flex flex-col md:flex-row md:space-x-32">
+          <!-- Image -->
+          <div class="md:w-1/2">
+            <img
+              src="images/image-computer.png"
+              alt=""
+              class="md:absolute top-0 right-[50%]"
+            />
+          </div>
+
+          <!-- Items Container -->
+          <div
+            class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16"
+          >
+            <!-- Item 1 -->
+            <div>
+              <h5 class="items-h5">Quick Search</h5>
+              <p class="items-p">
+                Easily search your snippets by content, category, web address,
+                application, and more.
+              </p>
+            </div>
+            <!-- Item 2 -->
+            <div>
+              <h5 class="items-h5">iCloud Sync</h5>
+              <p class="items-p">
+                Instantly saves and syncs snippets across all your devices.
+              </p>
+            </div>
+            <!-- Item 3 -->
+            <div>
+              <h5 class="items-h5">Completely History</h5>
+              <p class="items-p">
+                Retrieve any snippets from the first moment you started using
+                the app.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Access Anywhere Section -->
+    <section id="access">
+      <div class="section-container my-20">
+        <h3>Access Clipboard Anywhere</h3>
+        <p class="section-p">
+          Whether you’re on the go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+        <img src="images/image-devices.png" alt="" class="mx-auto" />
       </div>
     </section>
   </body>
