--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="section-container mb-40 pt-16">
         <img src="images/logo.svg" alt="" class="mx-auto my-16" />
         <h3>A history of everything you copy</h3>
-        <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
+        <p class="section-p mb-10 text-2xl">
           Clipboard allows you to track and organize everything you copy.
           Instantly access your clipboard on all your devices.
         </p>
@@ -35,7 +35,7 @@
     <section id="snippets" class="">
       <div class="section-container my-20">
         <h3>Keep track of your snippets</h3>
-        <p class="section-p">
+        <p class="section-p mb-24">
           Clipboard instantly stores any item you copy in the cloud, meaning you
           can access your snippets immediately on all your devices. Our Mac and
           iOS apps will help you organize everything.
@@ -62,7 +62,7 @@
           >
             <!-- Item 1 -->
             <div>
-              <h5 class="items-h5">Quick Search</h5>
+              <h5>Quick Search</h5>
               <p class="items-p">
                 Easily search your snippets by content, category, web address,
                 application, and more.
@@ -70,14 +70,14 @@
             </div>
             <!-- Item 2 -->
             <div>
-              <h5 class="items-h5">iCloud Sync</h5>
+              <h5>iCloud Sync</h5>
               <p class="items-p">
                 Instantly saves and syncs snippets across all your devices.
               </p>
             </div>
             <!-- Item 3 -->
             <div>
-              <h5 class="items-h5">Completely History</h5>
+              <h5>Completely History</h5>
               <p class="items-p">
                 Retrieve any snippets from the first moment you started using
                 the app.
@@ -92,11 +92,52 @@
     <section id="access">
       <div class="section-container my-20">
         <h3>Access Clipboard Anywhere</h3>
-        <p class="section-p">
+        <p class="section-p mb-24">
           Whether you’re on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
         <img src="images/image-devices.png" alt="" class="mx-auto" />
+      </div>
+    </section>
+
+    <!-- Supercharge Section -->
+    <section id="supercharge">
+      <div class="section-container my-20">
+        <h3>Supercharge your workflow</h3>
+        <p class="section-p mb-16">
+          We've got the tools to boost your productivity.
+        </p>
+
+        <!-- Items Container -->
+        <div
+          class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12"
+        >
+          <!-- Item 1 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-blacklist.svg" alt="" class="mb-6" />
+            <h5>Create Blacklists</h5>
+            <p class="items-p">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <!-- Item 2 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-text.svg" alt="" class="mb-6" />
+            <h5>Plain Text Snippets</h5>
+            <p class="items-p">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </div>
+          <!-- Item 3 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-preview.svg" alt="" class="mb-6" />
+            <h5>Sneak Preview</h5>
+            <p class="items-p">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
